--- a/spring-cloud-alibaba-nacos-register/pom.xml
+++ b/spring-cloud-alibaba-nacos-register/pom.xml
@@ -16,11 +16,13 @@
 		<spring-boot.version>2.4.3</spring-boot.version>
 		<spring-cloud.version>2020.0.2</spring-cloud.version>
 		<spring-cloud-alibaba.version>2021.1</spring-cloud-alibaba.version>
+		<nacos.version>2.0.1</nacos.version>
 	</properties>
 
 	<modules>
 		<module>consumer-example</module>
 		<module>provider-example</module>
+		<module>provider-example2</module>
 	</modules>
 
 	<dependencies>
@@ -65,6 +67,12 @@
 				<version>${spring-cloud-alibaba.version}</version>
 				<type>pom</type>
 				<scope>import</scope>
+			</dependency>
+
+			<dependency>
+				<groupId>com.alibaba.nacos</groupId>
+				<artifactId>nacos-client</artifactId>
+				<version>${nacos.version}</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
