--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
 
     <modules>
         <module>spring-cloud-alibaba-nacos-register</module>
+        <module>spring-cloud-openfeign</module>
     </modules>
 
 </project>
