--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
     <modules>
         <module>spring-cloud-alibaba-nacos-register</module>
         <module>spring-cloud-openfeign</module>
+        <module>spring-cloud-gateway</module>
     </modules>
 
 </project>
